--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -19,10 +19,17 @@
 </div>
 
 <div class="navbar navbar-dark bg-dark shadow-sm">
-  <div class="container d-flex justify-content-between">
-    <%= link_to "Oray Kurt", root_path, class: 'navbar-brand' %>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div class="container d-flex justify-content">
+    <div class="justify-content-start">
+      <%= link_to "Oray Kurt", root_path, class: 'navbar-brand' %>
+    </div>
+    <div class="ml-auto">
+      <%= login_helper "btn text-white" %>
+    </div>
+    <div class="justify-content-end ml-5">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
   </div>
 </div>
