--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,20 +1,21 @@
-<%= link_to "Back", request.referer.present? ? request.referer : root_path %>
-
-<h1>Show</h1>
-<div>
-  <ul>
-      <li>
-        <%= link_to "Edit the Portfolio", edit_portfolio_path(@portfolio.id) if logged_in?(:site_admin) %>
-
-        <p><%= @portfolio.title %></p>
-        <p><%= @portfolio.subtitle %></p>
-        <p><%= @portfolio.body %></p>
-        <%= image_tag @portfolio.main_image unless @portfolio.main_image.nil? %>
-
-        <h2>Technologies Used:</h2>
-        <% @portfolio.technologies.each do |tech| %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio.main_image %>
+    </div>
+    <div class="col-md-5">
+      <h2><%= @portfolio.title %></h2>
+      <hr/>
+      <em><%= @portfolio.subtitle %></em>
+      <p><%= @portfolio.body %></p>
+      <hr/>
+      <h4>Technologies userd: </h4>
+      <% @portfolio.technologies.each do |tech| %>
         <p><%= tech.name %></p>
-        <% end %>
-      </li>
-  </ul>
+      <% end %>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center mt-5">
+    <%= link_to "View All Portfolio", portfolios_path, class: "btn btn-secondary" %>
+  </div>
 </div>
