--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,19 +1,24 @@
 <%= form_for(portfolio) do |f| %>
+<div class="row">
+  <div class="col-md-6">
+    <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control'%>
+    </div>
 
-<div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control'%>
+    <div class="form-group">
+      <%= f.label :subtitle %>
+      <%= f.text_field :subtitle, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="form-group">
+      <%= f.label :body %>
+      <%= f.text_area :body, class: 'form-control', rows: 15 %>
+    </div>
+  </div>
 </div>
 
-<div class="form-group">
-    <%= f.label :subtitle %>
-    <%= f.text_field :subtitle, class: 'form-control' %>
-</div>
-
-<div class="form-group">
-    <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control', rows: 10 %>
-</div>
   <hr>
   <h4>Technologies Used:</h4>
 <div>
