--- a/app/views/portfolios/_portfolio.html.erb
+++ b/app/views/portfolios/_portfolio.html.erb
@@ -1,4 +1,4 @@
-  <div class="card">
+  <div class="card" data-id="<%=portfolio.id %>">
    <%= image_tag portfolio.thumb_image %>
     <p class="card-text">
       <span><%= portfolio.title %></span>
