--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,13 +4,15 @@
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d80127.55468538459!2d16.92182452450255!3d51.12716471936589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fe9c2d4b58abf%3A0xb70956aec205e0f5!2zV3JvY8WCYXc!5e0!3m2!1str!2spl!4v1612458803387!5m2!1str!2spl" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
     </iframe>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6" style="pointer-events: none;">
     <form action="" method="post" id="form-contact-me">
       <div class="card bg-secondary rounded-0">
         <div class="card-header p-0">
           <div class="bg-secondary text-white text-center py-2">
-            <h3>Contact Me</h3>
-            <p class="m-0">I love to talk with you about our unique</p>
+<!--            <h3>Contact Me</h3>-->
+            <p class="m-0"><strong>Contact Form is <em>temporarily</em> disabled</strong></p>
+
+            <p class="m-0">I would love to help you</p>
           </div>
         </div>
         <div class="card-body p-3">
@@ -49,9 +51,14 @@
     </form>
   </div>
 </div>
-<div class="d-flex justify-content-center mt-5 social-links">
+<div class="d-flex justify-content-center mt-5">
+  <h4>Explore Me</h4>
+</div>
+<hr>
+<div class="d-flex justify-content-center mt-1 social-links">
+  <a href="https://linkedin.com/in/rootkt" target="_blank" ><%= fa_icon "linkedin" %></a>
+  <a href="mailto:oraykt@gmail.com" target="_blank" ><%= fa_icon "envelope" %></a>
   <a href="https://github.com/oraykt" target="_blank" ><%= fa_icon "github" %></a>
   <a href="https://instagram.com/oraykt" target="_blank" ><%= fa_icon "instagram" %></a>
   <a href="https://facebook.com/oraykurt" target="_blank" ><%= fa_icon "facebook" %></a>
-  <a href="https://linkedin.com/in/rootkt" target="_blank" ><%= fa_icon "linkedin" %></a>
 </div>
