--- a/app/views/portfolios/_portfolio.html.erb
+++ b/app/views/portfolios/_portfolio.html.erb
@@ -1,4 +1,5 @@
   <div class="card" data-id="<%=portfolio.id %>">
+    <%= image_tag portfolio_img(portfolio.thumb_image, 'thumb') %>
    <%= image_tag portfolio.thumb_image.to_s %>
     <p class="card-text">
       <span><%= portfolio.title %></span>
