--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container pt-2">
   <div class="row">
     <div class="col-md-7">
-      <%= image_tag @portfolio.main_image.to_s, width: "100%" %>
+      <%= image_tag portfolio_img(@portfolio.main_image, 'main'), width: "100%" %>
     </div>
     <div class="col-md-5">
       <h2><%= @portfolio.title %></h2>
@@ -9,13 +9,15 @@
       <em><%= @portfolio.subtitle %></em>
       <p><%= @portfolio.body %></p>
       <hr/>
-      <h4>Technologies userd: </h4>
+      <h4>Technologies used: </h4>
       <% @portfolio.technologies.each do |tech| %>
         <p><%= tech.name %></p>
       <% end %>
     </div>
   </div>
   <div class="d-flex justify-content-center mt-5">
-    <%= link_to "View All Portfolio", portfolios_path, class: "btn btn-secondary" %>
+    <%= link_to 'Edit', edit_portfolio_path(@portfolio), class: "btn btn-secondary mr-2" if logged_in?(:site_admin) %>
+    <%= link_to 'Delete', portfolio_path(@portfolio), method: :delete, data: { confirm: 'Are you sure?' },  class: "btn btn-danger mr-5" if logged_in?(:site_admin) %>
+    <%= link_to "View All Portfolio", portfolios_path, class: "btn btn-primary" %>
   </div>
 </div>
