--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -12,13 +12,13 @@
     </div>
 
     <div class="form-group">
-      <label for="" class="btn btn-primary">
+      <label class="btn btn-primary">
         Upload a main image file <%= f.file_field :main_image, style: 'display:none;' %>
       </label>
     </div>
 
     <div class="form-group">
-      <label for="" class="btn btn-primary">
+      <label class="btn btn-primary">
         Upload a thumb image file <%= f.file_field :thumb_image, style: 'display:none;' %>
       </label>
     </div>
