--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -4,7 +4,7 @@
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
     <h4>About</h4>
-    <p><em>An entrepreneur</em>, <em>developer</em>, & <em>unshakable optimist</em> dedicated to helping IT companies to build <em>the skyline of tomorrow</em></p>
+    <p><em>An entrepreneur</em>, <em>developer</em>, & <em>unshakable optimist</em> dedicated to building <em>the skyline of tomorrow</em></p>
   </div>
   <!--      <div class="sidebar-module">-->
   <!--        <h4>Archives</h4>-->
