--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,6 +1,3 @@
-
-
-<!--    start of side-->
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
     <h4>About</h4>
@@ -32,5 +29,4 @@
       <li><a href="https://linkedin.com/in/rootkt" target="_blank"><%= fa_icon "linkedin" %></a></li>
     </ol>
   </div>
-</div><!-- /.blog-sidebar -->
-<!--    end of side-->
+</div>
