--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -153,7 +153,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 55rem;
+    width: 70rem;
   }
 }
 
@@ -195,4 +195,18 @@ body {
 
 #my-image {
   filter: grayscale(70%);
+}
+
+.tweets{
+  opacity: .8;
+  background: grey;
+  color: black;
+  margin: 20px;
+}
+.tweets a{
+  color: green;
+}
+
+.tweets > .card {
+  padding: 30px;
 }
