--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,15 +1,15 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Rails News</h1>
-
+  <h1 class="cover-heading">Coding News</h1>
   <div class="row">
     <% @tweets.each do |tweet| %>
       <div class="col-md-6">
         <div class="tweets">
-          <div class="card bg-secondary">
+          <div class="card tweet text-justify">
             <%= twitter_link_parser tweet %>
           </div>
         </div>
       </div>
     <% end %>
   </div>
+  <em>-This page will be refactored-</em>
 </div>
