--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -7,4 +7,19 @@
   <p>
     <%= @blog.body %>
   </p>
+  <hr>
+
+  <% unless current_user.is_a? GuestUser %>
+    <%= form_for @comment, url: '#' do |f| %>
+
+    <div class="form-group">
+      <%= f.label :content, "Comments" %>
+      <%= f.text_area :content, class: 'form-control' %>
+    </div>
+
+    <%= f.submit "Post Comment", class: "btn btn-primary" %>
+    <% end %>
+  <% end %>
+
+  <%= render @blog.comments %>
 </div>
