--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,17 +8,8 @@
     <%= @blog.body %>
   </p>
   <hr>
-
   <% unless current_user.is_a? GuestUser %>
-    <%= form_for @comment, url: '#' do |f| %>
-
-    <div class="form-group">
-      <%= f.label :content, "Comments" %>
-      <%= f.text_area :content, class: 'form-control' %>
-    </div>
-
-    <%= f.submit "Post Comment", class: "btn btn-primary" %>
-    <% end %>
+    <%= render 'comments/form' %>
   <% end %>
 
   <%= render @blog.comments %>
