--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -12,5 +12,7 @@
     <%= render 'comments/form' %>
   <% end %>
 
-  <%= render @blog.comments %>
+  <div id="comments" data-blog-id="<%= @blog.id %>">
+    <%= render @blog.comments %>
+  </div>
 </div>
