--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,6 +3,7 @@
   <div class="d-flex">
     <%= link_to @blog.status, toggle_status_blog_path(@blog), class: 'btn-sm btn-' + (@blog.status == "published" ? "success" : "warning") %>
     <%= link_to 'Edit', edit_blog_path(@blog), class: 'btn-sm btn-secondary ml-2'%>
+    <%= link_to 'Destroy', @blog , method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn-sm btn-danger ml-auto'%>
   </div>
   <p>
     <%= @blog.body %>
@@ -12,7 +13,14 @@
     <%= render 'comments/form' %>
   <% end %>
 
-  <div id="comments" data-blog-id="<%= @blog.id %>">
-    <%= render @blog.comments %>
-  </div>
+
+  <% if @blog.comments.any? %>
+    <div class="d-flex justify-content-center mt-100">
+      <h4 >Latest Comments</h4>
+    </div>
+    <div id="comments" data-blog-id="<%= @blog.id %>" class="comment-widgets">
+      <%= render @blog.comments %>
+    </div>
+  <% end %>
+
 </div>
