--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,7 +10,9 @@
       <strong>Topic: </strong>
       <em><%= link_to "#{@blog.topic.title}", topic_path(@blog.topic)  %></em>
     </div>
-    <div class="card-body text-justify"><%= @blog.body %></div>
+    <div class="card-body text-justify">
+      <%= markdown @blog.body %>
+    </div>
   </div>
   <hr>
   <% unless current_user.is_a? GuestUser %>
