--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -4,8 +4,8 @@
     <% if logged_in?(:site_admin) %>
       <div class="d-flex">
         <%= link_to blog.status, toggle_status_blog_path(blog), class: 'btn-sm btn-' + (blog.status == "published" ? "success" : "warning") %>
-        <%= link_to 'Edit', edit_blog_path(blog), class: 'btn-sm btn-secondary ml-2'%>
-        <%= link_to 'Destroy', blog , method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn-sm btn-danger ml-auto'%>
+        <%= link_to fa_icon('pencil-square-o'), edit_blog_path(blog), class: 'btn-sm btn-secondary ml-auto'%>
+        <%= link_to fa_icon('trash'), blog , method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn-sm btn-danger ml-2'%>
       </div>
     <% end %>
   </div>
