--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="col-md-8 about-me p-5 mt-5">
+    <div class="col-md-8 about-me p-5 mt-2">
       <p class="text-justify">
         I am a self-motivated and ambitious software developer who enjoys connecting the dots: be it ideas from different disciplines, people from different teams, or applications from different industries. I have strong technical skills in web architecture and an academic background in engineering.
         My passion makes me an astute problem-solver capable of prioritizing and managing complex projects with proficiency.
@@ -31,7 +31,7 @@
         In my previous role, I exercised skills in communication and teamwork. As a team player, I feel confident and effective in collaborative work. I enjoy brainstorming to achieve a common goal.
       </p>
       <p class="text-justify">
-        I am open-minded on new developments in my field.
+        I am open-minded to new developments in my field.
       </p>
     </div>
   </div>
